--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
     "source.fixAll.eslint": "always",
     "source.organizeImports": "never"
   },
+
   "eslint.validate": [
     "javascript",
     "javascriptreact",
@@ -42,8 +43,8 @@
   "typescript.referencesCodeLens.enabled": true,
   "typescript.updateImportsOnFileMove.enabled": "always",
   "cSpell.words": [
-    "cdkname",
     "cdkstack",
+    "cdkvpcigwprotector",
     "corepack",
     "cytoscape",
     "lambdajs",
