--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,7 +17,6 @@
     "source.fixAll.eslint": "always",
     "source.organizeImports": "never"
   },
-
   "eslint.validate": [
     "javascript",
     "javascriptreact",
@@ -51,6 +50,7 @@
     "packmak",
     "pacmak",
     "publib",
-    "Sonarcloud"
+    "Sonarcloud",
+    "superchain"
   ],
 }
