--- a/package.json
+++ b/package.json
@@ -48,46 +48,46 @@
     "organization": true
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.8.0",
-    "@types/aws-lambda": "^8.10.145",
-    "@types/jest": "^29.5.14",
-    "@types/node": "22.8.6",
+    "@antfu/eslint-config": "^5.4.1",
+    "@types/aws-lambda": "^8.10.155",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.7.2",
     "@types/source-map-support": "^0.5.10",
-    "@typescript-eslint/eslint-plugin": "^8.12.2",
-    "@typescript-eslint/parser": "^8.12.2",
-    "aws-cdk": "^2.165.0",
-    "aws-cdk-lib": "2.165.0",
-    "cdk-dia": "^0.11.0",
-    "constructs": "10.4.2",
-    "esbuild": "^0.24.0",
-    "eslint": "^9.14.0",
-    "eslint-plugin-import": "^2.31.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.0",
+    "@typescript-eslint/parser": "^8.46.0",
+    "aws-cdk": "^2.1030.0",
+    "aws-cdk-lib": "^2.219.0",
+    "cdk-dia": "^0.12.1",
+    "constructs": "^10.4.2",
+    "esbuild": "^0.25.10",
+    "eslint": "^9.37.0",
+    "eslint-plugin-import": "^2.32.0",
     "http-server": "^14.1.1",
-    "jest": "^29.7.0",
-    "jsii": "^5.5.8",
-    "jsii-diff": "^1.104.0",
-    "jsii-docgen": "^10.5.5",
-    "jsii-pacmak": "^1.104.0",
-    "jsii-rosetta": "^5.5.5",
-    "publib": "^0.2.910",
-    "ts-jest": "^29.2.5",
+    "jest": "^30.2.0",
+    "jsii": "^5.9.7",
+    "jsii-diff": "^1.115.0",
+    "jsii-docgen": "^10.10.0",
+    "jsii-pacmak": "^1.115.0",
+    "jsii-rosetta": "^5.9.8",
+    "publib": "^0.2.1023",
+    "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
-    "typescript": "~5.6.3"
+    "typescript": "^5.9.3"
   },
   "peerDependencies": {
-    "aws-cdk-lib": "2.164.1",
+    "aws-cdk-lib": "2.219.0",
     "constructs": "^10.4.2"
   },
   "dependencies": {
-    "@aws-sdk/client-ec2": "^3.683.0",
-    "@types/aws-lambda": "^8.10.145",
-    "aws-cdk-lib": "2.165.0",
+    "@aws-sdk/client-ec2": "^3.908.0",
+    "@types/aws-lambda": "^8.10.155",
+    "aws-cdk-lib": "^2.219.0",
     "aws-lambda": "^1.0.7",
-    "aws-sdk": "^2.1691.0",
-    "cdk-iam-floyd": "^0.658.0",
+    "aws-sdk": "^2.1692.0",
+    "cdk-iam-floyd": "^0.721.0",
     "constructs": "^10.4.2",
     "source-map-support": "^0.5.21",
-    "winston": "^3.16.0"
+    "winston": "^3.18.3"
   },
   "bundledDependencies": [
     "@aws-sdk/client-ec2",
@@ -138,5 +138,5 @@
       }
     }
   },
-  "packageManager": "yarn@4.5.2+sha512.570504f67349ef26d2d86a768dc5ec976ead977aa086b0bb4237e97d5db7ae5c620f9f0e0edf3ea5047205063faff102bf2a2d778664a94eaaa1085ad483fe2e"
+  "packageManager": "yarn@4.10.3+sha512.c38cafb5c7bb273f3926d04e55e1d8c9dfa7d9c3ea1f36a4868fa028b9e5f72298f0b7f401ad5eb921749eb012eb1c3bb74bf7503df3ee43fd600d14a018266f"
 }
