chore: adds engine to package.json

--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "email": "pgollucci@p6m7g8.com",
     "organization": true
   },
+  "engines": {
+    "node": ">= 24.9.0"
+  },
   "devDependencies": {
     "@antfu/eslint-config": "^5.4.1",
     "@types/aws-lambda": "^8.10.155",
